# application-api-module/src/main/java/com/skyhigh/daycareapi/controller/UserApi.java
@@ -1,0 +1,101 @@
+/**
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech) (6.2.1).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+package com.skyhigh.daycareapi.controller;
+
+import com.skyhigh.daycareapi.model.dto.LoginRequestDto;
+import com.skyhigh.daycareapi.model.dto.LoginResponseDto;
+import io.swagger.v3.oas.annotations.Operation;
+import io.swagger.v3.oas.annotations.Parameter;
+import io.swagger.v3.oas.annotations.media.Content;
+import io.swagger.v3.oas.annotations.media.Schema;
+import io.swagger.v3.oas.annotations.responses.ApiResponse;
+import io.swagger.v3.oas.annotations.tags.Tag;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.MediaType;
+import org.springframework.http.ResponseEntity;
+import org.springframework.validation.annotation.Validated;
+import org.springframework.web.bind.annotation.*;
+import org.springframework.web.context.request.NativeWebRequest;
+
+import javax.validation.Valid;
+import java.util.Optional;
+import javax.annotation.Generated;
+
+@Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2026-10-01T17:53:30.464277-03:00[America/Halifax]")
+@Validated
+@Tag(name = "user", description = "Operations common for all users")
+public interface UserApi {
+
+    default Optional<NativeWebRequest> getRequest() {
+        return Optional.empty();
+    }
+
+    /**
+     * POST /user/login : Logs user into the system
+     *
+     * @param loginRequestDto Parent object (required)
+     * @return Successful operation (status code 201)
+     *         or Invalid parentname/password supplied (status code 400)
+     */
+    @Operation(
+            operationId = "loginUser",
+            summary = "Logs user into the system",
+            tags = { "User" },
+            responses = {
+                    @ApiResponse(responseCode = "201", description = "Successful operation", content = {
+                            @Content(mediaType = "application/json", schema = @Schema(implementation = LoginResponseDto.class))
+                    }),
+                    @ApiResponse(responseCode = "400", description = "Invalid parentname/password supplied")
+            }
+    )
+    @RequestMapping(
+            method = RequestMethod.POST,
+            value = "/user/login",
+            produces = { "application/json" },
+            consumes = { "application/json" }
+    )
+    default ResponseEntity<LoginResponseDto> loginUser(
+            @Parameter(name = "LoginRequestDto", description = "Parent object", required = true) @Valid @RequestBody LoginRequestDto loginRequestDto
+    ) {
+        getRequest().ifPresent(request -> {
+            for (MediaType mediaType: MediaType.parseMediaTypes(request.getHeader("Accept"))) {
+                if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
+                    String exampleString = "{ \"access_token\" : \"eyJhbGciOiJSUzI1NiIs...\", \"refresh_token\" : \"eyJhbGciOiJSUzI1NiIs...\", \"token_type\" : \"Bearer\", \"expires_in\" : 300 }";
+                    ApiUtil.setExampleResponse(request, "application/json", exampleString);
+                    break;
+                }
+            }
+        });
+        return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
+
+    }
+
+
+    /**
+     * GET /user/logout : Logs out current logged in parent session
+     *
+     * @return successful operation (status code 200)
+     */
+    @Operation(
+            operationId = "logoutUser",
+            summary = "Logs out current logged in parent session",
+            tags = { "User" },
+            responses = {
+                    @ApiResponse(responseCode = "200", description = "successful operation")
+            }
+    )
+    @RequestMapping(
+            method = RequestMethod.GET,
+            value = "/user/logout"
+    )
+    default ResponseEntity<Void> logoutUser(
+
+    ) {
+        return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
+
+    }
+
+}
